--- a/src/CelsiusConverterGUI.form
+++ b/src/CelsiusConverterGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="536" height="471"/>
     </constraints>
-    <properties/>
+    <properties>
+      <font size="16" style="1"/>
+    </properties>
     <border type="none"/>
     <children>
       <hspacer id="f4948">
@@ -43,20 +45,23 @@
       <component id="d5dff" class="javax.swing.JTextField" binding="celsiusTexfield">
         <constraints>
           <grid row="2" column="1" row-span="4" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="dfe1" class="javax.swing.JLabel" binding="FahrenheitLabel">
-        <constraints>
-          <grid row="6" column="2" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="200" height="100"/>
-            <preferred-size width="200" height="100"/>
+            <preferred-size width="100" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Fahrenheit"/>
+          <font name="Fira Code" size="20" style="1"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="dfe1" class="javax.swing.JLabel" binding="FahrenheitLabel">
+        <constraints>
+          <grid row="6" column="1" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="300" height="100"/>
+            <preferred-size width="300" height="100"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="  0  Fahrenheit"/>
         </properties>
       </component>
       <grid id="4b426" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="20">
