--- a/src/CelsiusConverterGUI.form
+++ b/src/CelsiusConverterGUI.form
@@ -3,18 +3,14 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="0" bottom="0" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="536" height="471"/>
+      <xy x="20" y="20" width="652" height="471"/>
     </constraints>
     <properties>
+      <background color="-1317668"/>
       <font size="16" style="1"/>
     </properties>
     <border type="none"/>
     <children>
-      <hspacer id="f4948">
-        <constraints>
-          <grid row="2" column="3" row-span="4" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <hspacer id="48685">
         <constraints>
           <grid row="7" column="4" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -39,7 +35,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="Átváltás"/>
+          <text value="Fahrenheitre"/>
         </properties>
       </component>
       <component id="d5dff" class="javax.swing.JTextField" binding="celsiusTexfield">
@@ -57,10 +53,11 @@
         <constraints>
           <grid row="6" column="1" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="100"/>
-            <preferred-size width="300" height="100"/>
+            <preferred-size width="500" height="100"/>
           </grid>
         </constraints>
         <properties>
+          <font size="16"/>
           <text value="  0  Fahrenheit"/>
         </properties>
       </component>
@@ -84,7 +81,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add meg a hőmérsékletet Celsius fokban"/>
+          <text value="Add meg a hőmérsékletet Celsius  vagy  Fahreinfeit fokban"/>
         </properties>
       </component>
       <grid id="6ead8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
@@ -114,6 +111,14 @@
         <border type="none"/>
         <children/>
       </grid>
+      <component id="4c2b3" class="javax.swing.JButton" binding="CelsiusButton">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Celsiusra"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
