--- a/src/CelsiusConverterGUI.form
+++ b/src/CelsiusConverterGUI.form
@@ -58,7 +58,7 @@
         </constraints>
         <properties>
           <font size="16"/>
-          <text value="  0  Fahrenheit"/>
+          <text value="  0   Fahreinheit / Celsius fok"/>
         </properties>
       </component>
       <grid id="4b426" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="20">
@@ -117,6 +117,14 @@
         </constraints>
         <properties>
           <text value="Celsiusra"/>
+        </properties>
+      </component>
+      <component id="1a9d3" class="javax.swing.JButton" binding="buttonClear">
+        <constraints>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Töröl / Clear"/>
         </properties>
       </component>
     </children>
