--- a/src/CelsiusConverterGUI.form
+++ b/src/CelsiusConverterGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="CelsiusConverterGUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="14" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="0" bottom="0" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="652" height="471"/>
+      <xy x="20" y="20" width="683" height="471"/>
     </constraints>
     <properties>
       <background color="-1317668"/>
@@ -13,45 +13,32 @@
     <children>
       <hspacer id="48685">
         <constraints>
-          <grid row="7" column="4" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="4" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <vspacer id="4bba3">
-        <constraints>
-          <grid row="9" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <hspacer id="5f0d1">
         <constraints>
-          <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="155" height="11"/>
           </grid>
         </constraints>
       </hspacer>
-      <component id="27fc0" class="javax.swing.JButton" binding="ConverterButton">
-        <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="155" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Fahrenheitre"/>
-        </properties>
-      </component>
       <component id="d5dff" class="javax.swing.JTextField" binding="celsiusTexfield">
         <constraints>
-          <grid row="2" column="1" row-span="4" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="7" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
             <preferred-size width="100" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <font name="Fira Code" size="20" style="1"/>
+          <horizontalAlignment value="0"/>
           <text value=""/>
         </properties>
       </component>
       <component id="dfe1" class="javax.swing.JLabel" binding="FahrenheitLabel">
         <constraints>
-          <grid row="6" column="1" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="9" column="1" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="300" height="100"/>
             <preferred-size width="500" height="100"/>
           </grid>
@@ -68,19 +55,14 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children>
-          <hspacer id="be1e1">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
-        </children>
+        <children/>
       </grid>
       <component id="33e5d" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <text value="Add meg a hőmérsékletet Celsius  vagy  Fahreinfeit fokban"/>
         </properties>
       </component>
@@ -96,24 +78,35 @@
       <grid id="84686" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="33197" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="30">
+      <grid id="33197" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="30">
         <margin top="10" left="100" bottom="10" right="10"/>
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <hspacer id="84ebb">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <vspacer id="eb110">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
       </grid>
       <component id="4c2b3" class="javax.swing.JButton" binding="CelsiusButton">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Celsiusra"/>
@@ -121,10 +114,22 @@
       </component>
       <component id="1a9d3" class="javax.swing.JButton" binding="buttonClear">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-7763575"/>
+          <foreground color="-13617343"/>
           <text value="Töröl / Clear"/>
+        </properties>
+      </component>
+      <component id="27fc0" class="javax.swing.JButton" binding="ConverterButton">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="155" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Fahrenheitre"/>
         </properties>
       </component>
     </children>
